# DCharVault-1

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.27f9f13  Main.qml  README.md  main.cpp  vcpkg.json
.github/workflows/: build.yml
model/: DatabaseManager.cpp  DatabaseManager.h  DiaryEntry.cpp  DiaryEntry.h  DiaryManager.cpp  DiaryManager.h  EncryptionManager.cpp  EncryptionManager.h  SecureAllocator.h  TitleGenerators.h
ui/: EditorToolbar.qml  EditorView.qml  HomeView.qml  SidebarView.qml  login.qml
ui/android/: EditorView.qml  HomeView.qml  SidebarView.qml
ui/common/: AndroidLogin.qml  login.qml  loginView.qml
ui/desktop/: EditorToolbar.qml  EditorView.qml  HomeView.qml  SidebarView.qml
viewmodel/: DiaryListModel.h  DiaryViewModel.cpp  DiaryViewModel.h  LoginViewModel.cpp  LoginViewModel.h  SecurePasswordInput.cpp
